.helm/example-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /example-app
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /example-app
        pathType: Prefix
        backend:
          service:
            name: example-app
            port:
              number: 8000
